Recharge de compte OK

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,10 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+.idea/copyright/Grace_BK.xml
+.idea/copyright/profiles_settings.xml
+.idea/copyright/Project_school.xml
+.idea/copyright/Projet_Scolaire.xml
+.idea/misc.xml
+.idea/navEditor.xml
+.idea/vcs.xml
