--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.ic_launcher_f.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -32,13 +32,14 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.gms:play-services-plus:16.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.ic_launcher_f:runner:1.0.2'
+    androidTestImplementation 'com.android.support.ic_launcher_f.espresso:espresso-core:3.0.2'
 
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-functions:16.1.3'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha09'
 }
 
 apply plugin: 'com.google.gms.google-services'
