--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -34,12 +35,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.ic_launcher_f:runner:1.0.2'
     androidTestImplementation 'com.android.support.ic_launcher_f.espresso:espresso-core:3.0.2'
-
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-functions:16.1.3'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha09'
+    //implementation 'com.android.support:support-core-utils:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
